Attempt to fix wrapping issue observed on Samsung A52.

--- a/src/GameItem.css
+++ b/src/GameItem.css
@@ -1,10 +1,14 @@
+.game-item > li{
+    font-size: 16px;
+}
+
 .game-item{
     background: #4d4d4b;
     color: #00ccff;
-    text-align: center;
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    line-height: 26px;
     list-style: none;
-    width: fit-content;
 }
 
 .game-item:hover{
